playground/notas_tests/invalid/mix-03.hulk
print(true @ false + 1);
